list all Badania with assocs

--- a/MVVMFirma/MVVMFirma.csproj
+++ b/MVVMFirma/MVVMFirma.csproj
@@ -90,6 +90,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Helper\BaseCommand.cs" />
+    <Compile Include="Models\EntitiesForView\BadaniaForAllView.cs" />
     <Compile Include="Models\EntitiesForView\DokumentacjaForAllView.cs" />
     <Compile Include="Models\EntitiesForView\FakturaForAllView.cs" />
     <Compile Include="Models\EntitiesForView\HistoriaChorobForAllView.cs" />
