--- a/MVVMFirma/MVVMFirma.csproj
+++ b/MVVMFirma/MVVMFirma.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Models\EntitiesForView\DokumentacjaForAllView.cs" />
     <Compile Include="Models\EntitiesForView\FakturaForAllView.cs" />
     <Compile Include="Models\EntitiesForView\HistoriaChorobForAllView.cs" />
+    <Compile Include="Models\EntitiesForView\LekarzOddzialyForAllView.cs" />
     <Compile Include="Models\EntitiesForView\PlatnosciForAllView.cs" />
     <Compile Include="Models\EntitiesForView\ReceptaLekiForAllView.cs" />
     <Compile Include="Models\EntitiesForView\ReceptyForAllView.cs" />
