--- a/MVVMFirma/MVVMFirma.csproj
+++ b/MVVMFirma/MVVMFirma.csproj
@@ -91,6 +91,8 @@
     </Compile>
     <Compile Include="Helper\BaseCommand.cs" />
     <Compile Include="Models\BusinessLogic\DataBaseClass.cs" />
+    <Compile Include="Models\BusinessLogic\OddzialB.cs" />
+    <Compile Include="Models\BusinessLogic\PersonelB.cs" />
     <Compile Include="Models\BusinessLogic\TowarB.cs" />
     <Compile Include="Models\EntitiesForView\BadaniaForAllView.cs" />
     <Compile Include="Models\EntitiesForView\DokumentacjaForAllView.cs" />
