add with foreign key Wizyty

--- a/MVVMFirma/MVVMFirma.csproj
+++ b/MVVMFirma/MVVMFirma.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Models\BusinessLogic\DataBaseClass.cs" />
     <Compile Include="Models\BusinessLogic\LekarzB.cs" />
     <Compile Include="Models\BusinessLogic\OddzialB.cs" />
+    <Compile Include="Models\BusinessLogic\PacjentB.cs" />
     <Compile Include="Models\BusinessLogic\PersonelB.cs" />
     <Compile Include="Models\BusinessLogic\TowarB.cs" />
     <Compile Include="Models\EntitiesForView\BadaniaForAllView.cs" />
