--- a/MVVMFirma/MVVMFirma.csproj
+++ b/MVVMFirma/MVVMFirma.csproj
@@ -90,6 +90,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Helper\BaseCommand.cs" />
+    <Compile Include="Models\BusinessLogic\BadanieB.cs" />
     <Compile Include="Models\BusinessLogic\DataBaseClass.cs" />
     <Compile Include="Models\BusinessLogic\LekarzB.cs" />
     <Compile Include="Models\BusinessLogic\OddzialB.cs" />
