--- a/MVVMFirma/MVVMFirma.csproj
+++ b/MVVMFirma/MVVMFirma.csproj
@@ -93,9 +93,11 @@
     <Compile Include="Models\BusinessLogic\BadanieB.cs" />
     <Compile Include="Models\BusinessLogic\DataBaseClass.cs" />
     <Compile Include="Models\BusinessLogic\LekarzB.cs" />
+    <Compile Include="Models\BusinessLogic\LekiB.cs" />
     <Compile Include="Models\BusinessLogic\OddzialB.cs" />
     <Compile Include="Models\BusinessLogic\PacjentB.cs" />
     <Compile Include="Models\BusinessLogic\PersonelB.cs" />
+    <Compile Include="Models\BusinessLogic\ReceptaB.cs" />
     <Compile Include="Models\BusinessLogic\TowarB.cs" />
     <Compile Include="Models\EntitiesForView\BadaniaForAllView.cs" />
     <Compile Include="Models\EntitiesForView\DokumentacjaForAllView.cs" />
