--- a/MVVMFirma/MVVMFirma.csproj
+++ b/MVVMFirma/MVVMFirma.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Models\BusinessLogic\OddzialB.cs" />
     <Compile Include="Models\BusinessLogic\PacjentB.cs" />
     <Compile Include="Models\BusinessLogic\PersonelB.cs" />
+    <Compile Include="Models\BusinessLogic\RaportPlatnoscB.cs" />
     <Compile Include="Models\BusinessLogic\ReceptaB.cs" />
     <Compile Include="Models\BusinessLogic\ReceptaLekB.cs" />
     <Compile Include="Models\BusinessLogic\TowarB.cs" />
@@ -217,6 +218,7 @@
     <Compile Include="ViewModels\NowyPersonelOddzialViewModel.cs" />
     <Compile Include="ViewModels\NowyPersonelViewModel.cs" />
     <Compile Include="ViewModels\NowyTowarViewModel.cs" />
+    <Compile Include="ViewModels\RaportPlatnosciViewModel.cs" />
     <Compile Include="ViewModels\WorkspaceViewModel.cs" />
     <Compile Include="ViewModels\WszyscyLekarzeViewModel.cs" />
     <Compile Include="ViewModels\WszyscyPacjenciViewModel.cs" />
@@ -292,6 +294,9 @@
     </Compile>
     <Compile Include="Views\NowyTowarView.xaml.cs">
       <DependentUpon>NowyTowarView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\RaportPlatnosciView.xaml.cs">
+      <DependentUpon>RaportPlatnosciView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\WszyscyLekarzeView.xaml.cs">
       <DependentUpon>WszyscyLekarzeView.xaml</DependentUpon>
@@ -454,6 +459,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\NowyTowarView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\RaportPlatnosciView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
